<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:mask="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.Cadastrar_Campeonato" android:id="@+id/telaCadastrarCampeonato">
    <TextView
            android:text="@string/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" android:layout_marginLeft="8dp"/>

    <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/categoria"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtfim_Campeonato" />

    <TextView
            android:text="@string/regras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/edtDescricao_Campeonato" android:layout_marginLeft="8dp"/>
    <TextView
            android:text="@string/descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/edtNome_Campeonato" android:layout_marginLeft="8dp"/>
    <TextView
            android:text="@string/inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/edtRegras_Campeonato" android:layout_marginLeft="8dp"
            tools:ignore="RtlCompat"/>
    <TextView
            android:text="@string/fim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintBottom_toBottomOf="@+id/textView4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintVertical_bias="0.074" app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginLeft="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtNome_Campeonato"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp"
            android:textColor="@color/colorAccent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtDescricao_Campeonato"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp" android:textColor="@color/colorAccent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtRegras_Campeonato"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18sp" android:textColor="@color/colorAccent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>


    <Spinner
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_Categoria_Campeonato"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginLeft="8dp"/>
    <TextView
            android:text="@string/times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" android:textColor="@color/colorPrimary"
            android:textSize="18sp" app:layout_constraintTop_toBottomOf="@+id/spinner_Categoria_Campeonato"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>
    <ImageButton
            android:layout_width="43dp"
            android:layout_height="27dp" app:srcCompat="@drawable/ic_arrow_seta_direita"
            android:id="@+id/btnTimes" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimary"
            tools:ignore="VectorDrawableCompat"/>
        <ImageButton
                android:layout_width="55dp"
                android:layout_height="55dp"
                app:srcCompat="@drawable/ic_done_green_24dp"
                android:id="@+id/btnCriar_Campeonato"
                android:background="@drawable/circle_"
                tools:ignore="VectorDrawableCompat" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.976"
                app:layout_constraintVertical_bias="0.988"
        />

    <Button
            android:id="@+id/edtinicio_Campeonato"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/butt"
            android:hint="dd/mm/aaaa"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
            android:id="@+id/edtfim_Campeonato"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/butt"
            android:hint="dd/mm/aaaa"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

</android.support.constraint.ConstraintLayout>