<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.Cadastrar_Jogador">

    <ImageButton
            android:layout_width="53dp"
            android:layout_height="39dp" app:srcCompat="@drawable/ic_arrow_seta_direita"
            android:id="@+id/btn_AdicionarTimes" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimary"
            tools:ignore="VectorDrawableCompat"/>
    <ImageButton
            android:layout_width="55dp"
            android:layout_height="55dp"
            app:srcCompat="@drawable/ic_done_green_24dp"
            android:id="@+id/btnCriar_Jogador"
            android:background="@drawable/circle_"
            tools:ignore="VectorDrawableCompat"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.976"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:text="@string/times"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary" android:textSize="18sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edtTelefone"
            android:layout_marginLeft="8dp"/>
    <TextView
            android:text="@string/funcao"
            android:layout_width="68dp"
            android:layout_height="27dp"
            android:id="@+id/textView31"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary" android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" android:layout_marginLeft="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:ems="10"
            android:id="@+id/edtFuncao" android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView31"
            android:textSize="18sp" android:textColor="@color/colorAccent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/email"
            android:layout_width="52dp"
            android:layout_height="28dp"
            android:id="@+id/textView30"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary" android:textSize="18sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtNick" android:layout_marginLeft="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtEmail" android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.202"
            app:layout_constraintTop_toBottomOf="@+id/textView30"
            android:textSize="18sp" android:textColor="@color/colorAccent"/>
    <TextView
            android:text="@string/nick"
            android:layout_width="44dp"
            android:layout_height="27dp"
            android:id="@+id/textView29"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary" android:textSize="18sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edtNome" android:layout_marginLeft="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtNick" android:layout_marginTop="8dp"
            android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.202"
            app:layout_constraintVertical_bias="0.008" app:layout_constraintTop_toBottomOf="@+id/textView29"
            android:textSize="18sp" android:textColor="@color/colorAccent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:ems="10"
            android:id="@+id/edtNome"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.202"
            android:textSize="18sp" app:layout_constraintTop_toBottomOf="@+id/textView28"
            android:textColor="@color/colorAccent" android:layout_marginTop="8dp"/>

    <com.github.pinball83.maskededittext.MaskedEditText
            android:id="@+id/edtTelefone"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:inputType="number"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32"
            app:mask="+** (**) *****-****"
            app:maskIconColor="@color/colorPrimary"
            app:notMaskedSymbol="*" />

    <TextView
            android:id="@+id/textView32"
            android:layout_width="74dp"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/telefone"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtFuncao"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:text="@string/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView28" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary" android:textSize="18sp" android:layout_marginLeft="8dp"/>
</android.support.constraint.ConstraintLayout>